--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
         ></button>
       </form>
 
-      <header class="container col-direction y-center x-center rg-15 p-15">
-        <div
-          id="primary-div"
-          class="hidden"
-        >
+      <div
+        id="primary-div"
+        class="hidden"
+      >
+        <header class="container col-direction y-center x-center rg-15">
           <!-- primary info -->
           <div
             id="city-main-info-div"
@@ -101,8 +101,8 @@
               Weather
             </p>
           </div>
-        </div>
-      </header>
+        </header>
+      </div>
 
       <div
         id="secondary-div"
